[project]
name = "LeetCode_Gym"
version = "0.0.0"
authors = [
  {name = "Kevin Knights", email = "kevin.k.knights@gmail.com"},
]
description = "Collections of problems I've solved from LeetCode."
readme = "README.md"
license = {file = "LICENSE"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
